--- a/HTML/link.html
+++ b/HTML/link.html
@@ -6,9 +6,9 @@
     <title>Document</title>
 </head>
 <body bgcolor="#11aa11">
-    <h2><a href="login.html">LOGIN</a><br>
-    <a href="register.html">REGISTER</a><br>
-    <a href="https://www.javapoint.com">javapoint</a><br>
+    <h2><a href="login.html" target="right">LOGIN</a><br>
+    <a href="register.html"  target="right">REGISTER</a><br>
+    <a href="https://www.javapoint.com"  target="right">javapoint</a><br>
     
 </body>
 </html>
